Fixed dialog toolbar overflow

--- a/css/_theme-dialog.sass
+++ b/css/_theme-dialog.sass
@@ -41,7 +41,6 @@
   .toolbar
     position: fixed
     padding-right: 0
+    padding-left: 0
 
-    width: -webkit-calc(90% - 57px)
-    width: -moz-calc(90% - 57px)
-    width: calc(90% - 57px)
+    width: 90%
